fix: add a bigger spacing between the icons and the text

--- a/client/src/components/search/searchBar/searchbar.css
+++ b/client/src/components/search/searchBar/searchbar.css
@@ -41,7 +41,7 @@
 }
 
 .fcc_searchBar .ais-SearchBox-input {
-  padding-inline: 1.5em;
+  padding-inline: 2em;
 }
 
 .fcc_searchBar .ais-Hits {
